--- a/Tutoriales/1222100922.md
+++ b/Tutoriales/1222100922.md
@@ -20,7 +20,7 @@
    - [Limpieza](#limpieza)
 2. [Docker Compose](#docker-compose)
 3. [Docker Swarm](#docker-swarm)
-4. [Ejemplo de uso práctico](#ejemplo-de-uso-práctico)
+4. [Comandos basicos ](#comandos-basicos)
 
 ---
 
@@ -243,6 +243,79 @@ docker compose stop
 docker compose restart
 ```
 
+**Verifica la sintaxis y configuración del archivo docker-compose.yml**
+```shell
+docker compose config
+````
+
+**Lista los proyectos y su estado actual**
+
+```shell
+docker compose ls
+```
+
+**Ejecuta un comando dentro de un servicio**
+
+```shell
+docker compose exec <servicio> <comando>
+```
+
+**Abre una terminal interactiva dentro de un servicio**
+
+```shell
+docker compose exec <servicio> /bin/bash
+```
+
+**Ver los contenedores, redes y volúmenes creados sin ejecutarlos**
+
+```shell
+docker compose config --services
+```
+
+**Elimina todos los volúmenes creados por los servicios**
+
+```shell
+docker compose down -v
+```
+
+**Elimina las imágenes generadas por el archivo Compose**
+
+```shell
+docker compose down --rmi all
+```
+
+**Escala un servicio a más contenedores**
+
+```shell
+docker compose up -d --scale <servicio>=<número>
+```
+
+**Detiene todos los contenedores de Compose**
+
+```shell
+docker compose kill
+```
+
+**Ver los puertos expuestos por los servicios**
+
+```shell
+docker compose port <servicio> <puerto_contenedor>
+```
+
+**Muestra estadísticas de uso de recursos de los servicios**
+
+```shell
+docker compose top
+```
+
+**Ver eventos en tiempo real del proyecto Compose**
+
+```shell
+docker compose events
+```
+
+
+
 ---
 
 ## Docker Swarm
@@ -283,9 +356,95 @@ docker stack ps <nombre_stack>
 docker info
 ```
 
+**Ver los nodos que forman parte del clúster**
+```shell
+docker node ls
+````
+
+**Mostrar información detallada de un nodo específico**
+
+```shell
+docker node inspect <id_nodo>
+```
+
+**Cambiar el rol de un nodo (manager o worker)**
+
+```shell
+docker node promote <nombre_nodo>
+docker node demote <nombre_nodo>
+```
+
+**Eliminar un nodo del clúster**
+
+```shell
+docker node rm <id_nodo>
+```
+
+**Ver los servicios desplegados en un stack**
+
+```shell
+docker stack services <nombre_stack>
+```
+
+**Eliminar un stack desplegado**
+
+```shell
+docker stack rm <nombre_stack>
+```
+
+**Escalar un servicio dentro del Swarm**
+
+```shell
+docker service scale <nombre_servicio>=<número>
+```
+
+**Ver detalles de un servicio**
+
+```shell
+docker service inspect <nombre_servicio>
+```
+
+**Ver las tareas (contenedores) asociadas a un servicio**
+
+```shell
+docker service ps <nombre_servicio>
+```
+
+**Actualizar la configuración de un servicio (por ejemplo, la imagen)**
+
+```shell
+docker service update --image <nueva_imagen> <nombre_servicio>
+```
+
+**Eliminar un servicio del Swarm**
+
+```shell
+docker service rm <nombre_servicio>
+```
+
+**Ver los logs de un servicio**
+
+```shell
+docker service logs <nombre_servicio>
+```
+
+**Ver el token de unión para añadir nuevos nodos**
+
+```shell
+docker swarm join-token worker
+docker swarm join-token manager
+```
+
+**Salir del clúster sin forzar (modo seguro)**
+
+```shell
+docker swarm leave
+```
+
 ---
 
-## Ejemplo de uso práctico
+
+## Comandos basicos 
 
 **Eliminar contenedores e imágenes no usados**
 
@@ -304,6 +463,114 @@ docker stack deploy -c swarm.yml billing
 ```shell
 docker service ls
 ```
+
+**Ver la versión instalada de Docker**
+```shell
+docker --version
+````
+
+**Verificar si el servicio Docker está en ejecución**
+
+```shell
+docker info
+```
+
+**Iniciar el servicio Docker **
+
+```shell
+sudo systemctl start docker
+```
+
+**Detener el servicio Docker**
+
+```shell
+sudo systemctl stop docker
+```
+
+**Reiniciar el servicio Docker**
+
+```shell
+sudo systemctl restart docker
+```
+
+**Listar todos los volúmenes creados**
+
+```shell
+docker volume ls
+```
+
+**Eliminar un volumen específico**
+
+```shell
+docker volume rm <nombre_volumen>
+```
+
+**Ver las redes disponibles**
+
+```shell
+docker network ls
+```
+
+**Crear una red personalizada**
+
+```shell
+docker network create <nombre_red>
+```
+
+**Eliminar una red**
+
+```shell
+docker network rm <nombre_red>
+```
+
+**Copiar un archivo desde el host al contenedor**
+
+```shell
+docker cp <ruta_host> <id_contenedor>:<ruta_destino>
+```
+
+**Copiar un archivo desde el contenedor al host**
+
+```shell
+docker cp <id_contenedor>:<ruta_origen> <ruta_host>
+```
+
+**Ver detalles de una imagen específica**
+
+```shell
+docker inspect <id_imagen>
+```
+
+**Renombrar un contenedor existente**
+
+```shell
+docker rename <nombre_actual> <nuevo_nombre>
+```
+
+**Pausar un contenedor en ejecución**
+
+```shell
+docker pause <id_contenedor>
+```
+
+**Reanudar un contenedor pausado**
+
+```shell
+docker unpause <id_contenedor>
+```
+
+**Eliminar todos los contenedores detenidos**
+
+```shell
+docker container prune
+```
+
+**Eliminar todas las imágenes no utilizadas**
+
+```shell
+docker image prune -a
+```
+
 
 ---
 
